# claude-safety-guard

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  new_pattern.md
.github/workflows/: ci.yml  release.yml
docs/: INSTALL.md  PATTERNS.md
examples/: config.toml  settings.json
src/claude_safety_guard/: __init__.py  __main__.py  _version.py  cli.py  config.py  guard.py  hook.py  patterns.py  types.py
tests/: test_cli.py  test_config.py  test_guard.py  test_hook.py  test_patterns.py
